// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiles atomic css 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/react';
const x = \\"atm_26_5scuol atm_e2_12xxubj\\";
console.log(x);"
`;

exports[`compiles atomic css 2`] = `

CSS:

.atm_26_5scuol{background:red;}
.atm_e2_12xxubj{height:100px;}

Dependencies: NA

`;

exports[`compiles atomic css with at-rules and property priorities 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/react';
const x = \\"atm_1h9nsec_idpfg4 atm_7xgmf7_14y27yu atm_ci1k5c_i2wt44 atm_le_1v6z61t\\";
console.log(x);"
`;

exports[`compiles atomic css with at-rules and property priorities 2`] = `

CSS:

@media (max-width:500px){.atm_1h9nsec_idpfg4.atm_1h9nsec_idpfg4{padding:0;}}
@media (min-width:300px){.atm_7xgmf7_14y27yu.atm_7xgmf7_14y27yu.atm_7xgmf7_14y27yu:hover{padding-top:5px;}}
.atm_ci1k5c_i2wt44.atm_ci1k5c_i2wt44:enabled{padding-left:6px;}
.atm_le_1v6z61t.atm_le_1v6z61t{padding-bottom:7px;}

Dependencies: NA

`;

exports[`compiles atomic css with at-rules and pseudo classes 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/react';
const x = \\"atm_1apu8aw_13q2bts atm_1yli2by_1cnho6b atm_1hwwax4_1osqo2v atm_26_5scuol atm_e2_12xxubj\\";
console.log(x);"
`;

exports[`compiles atomic css with at-rules and pseudo classes 2`] = `

CSS:

@media (max-width:500px){.atm_1apu8aw_13q2bts.atm_1apu8aw_13q2bts{background:blue;}}
@media (min-width:300px){.atm_1yli2by_1cnho6b.atm_1yli2by_1cnho6b:hover{background:purple;}}
.atm_1hwwax4_1osqo2v:enabled{width:100%;}
.atm_26_5scuol{background:red;}
.atm_e2_12xxubj{height:100px;}

Dependencies: NA

`;

exports[`compiles atomic css with keyframes 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/react';
const x = \\"atm_p_x1wbsp atm_26_5scuol atm_e2_12xxubj\\";
console.log(x);"
`;

exports[`compiles atomic css with keyframes 2`] = `

CSS:

@keyframes fade {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
.atm_p_x1wbsp{animation:fade 1s infinite;}
.atm_26_5scuol{background:red;}
.atm_e2_12xxubj{height:100px;}

Dependencies: NA

`;

exports[`compiles atomic css with property priorities 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/react';
const y = \\"atm_gz_14y27yu\\";
const x = \\"atm_gi_idpfg4\\";
console.log(x, y);"
`;

exports[`compiles atomic css with property priorities 2`] = `

CSS:

.atm_gz_14y27yu.atm_gz_14y27yu{margin-left:5px;}
.atm_gi_idpfg4{margin:0;}

Dependencies: NA

`;

exports[`compiles atomic css with unique atoms based on key value pairs 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
const x = \\"atm_e2_12xxubj\\";
const y = \\"atm_e2_tnzek8\\";
console.log(x, y);"
`;

exports[`compiles atomic css with unique atoms based on key value pairs 2`] = `

CSS:

.atm_e2_12xxubj{height:100px;}
.atm_e2_tnzek8{height:99px;}

Dependencies: NA

`;

exports[`compiles atomic styled with dynamic interpolations as unique variables based on the interpolation text 1`] = `
"/* @flow */
import { styled } from '@linaria/atomic';
const Component = /*#__PURE__*/styled('div')({
  name: \\"Component\\",
  class: \\"atm_7l_15g95l5 atm_4b_15g95l5 atm_2d_1en4k16 c17gu1mi\\",
  vars: {
    \\"1p69eoh\\": [props => props.color],
    \\"l12cfn\\": [props => props.backgroundColor]
  },
  atomic: true
});
const Component2 = /*#__PURE__*/styled('div')({
  name: \\"Component2\\",
  class: \\"atm_7l_15g95l5 atm_4b_1kgl01d cccybe9\\",
  vars: {
    \\"1p69eoh\\": [props => props.color],
    \\"1n9iccq\\": [props => props.color || \\"black\\"]
  },
  atomic: true
});
console.log(Component, Component2);"
`;

exports[`compiles atomic styled with dynamic interpolations as unique variables based on the interpolation text 2`] = `

CSS:

.atm_7l_15g95l5{color:var(--1p69eoh);}
.atm_4b_15g95l5.atm_4b_15g95l5{border-color:var(--1p69eoh);}
.atm_2d_1en4k16.atm_2d_1en4k16{background-color:var(--l12cfn);}
.atm_4b_1kgl01d.atm_4b_1kgl01d{border-color:var(--1n9iccq);}

Dependencies: NA

`;

exports[`compiles atomic styled with plain css, static and dynamic interpolations 1`] = `
"/* @flow */
import { styled } from '@linaria/atomic';
const Component = /*#__PURE__*/styled('div')({
  name: \\"Component\\",
  class: \\"atm_7l_13q2bts atm_e2_12xxubj atm_gi_12am3vd atm_2d_15g95l5 c17gu1mi\\",
  vars: {
    \\"1p69eoh\\": [props => props.color]
  },
  atomic: true
});
console.log(Component);"
`;

exports[`compiles atomic styled with plain css, static and dynamic interpolations 2`] = `

CSS:

.atm_7l_13q2bts{color:blue;}
.atm_e2_12xxubj{height:100px;}
.atm_gi_12am3vd{margin:50px;}
.atm_2d_15g95l5.atm_2d_15g95l5{background-color:var(--1p69eoh);}

Dependencies: NA

`;

exports[`compiles atomic styled with static css 1`] = `
"/* @flow */
import { styled } from '@linaria/atomic';
const Component = /*#__PURE__*/styled('div')({
  name: \\"Component\\",
  class: \\"atm_7l_13q2bts atm_e2_12xxubj c17gu1mi\\",
  atomic: true
});
console.log(Component);"
`;

exports[`compiles atomic styled with static css 2`] = `

CSS:

.atm_7l_13q2bts{color:blue;}
.atm_e2_12xxubj{height:100px;}

Dependencies: NA

`;

exports[`compiles atomic styled without colliding by property 1`] = `
"/* @flow */
import { styled } from '@linaria/atomic';
export const Component = /*#__PURE__*/styled('ul')({
  name: \\"Component\\",
  class: \\"atm_9s_1txwivl atm_l8_idpfg4 c17gu1mi\\",
  atomic: true
});
export const Component2 = /*#__PURE__*/styled('ul')({
  name: \\"Component2\\",
  class: \\"atm_9s_1ulexfb atm_l8_idpfg4 cccybe9\\",
  atomic: true
});"
`;

exports[`compiles atomic styled without colliding by property 2`] = `

CSS:

.atm_9s_1txwivl{display:flex;}
.atm_l8_idpfg4{padding:0;}
.atm_9s_1ulexfb{display:block;}

Dependencies: NA

`;

exports[`compiles atomic styled wrapping other components with extra priority 1`] = `
"/* @flow */
import { styled } from '@linaria/atomic';
const Component = /*#__PURE__*/styled('div')({
  name: \\"Component\\",
  class: \\"atm_2d_13q2bts atm_e2_12xxubj c17gu1mi\\",
  atomic: true
});
const ComponentCompositing = /*#__PURE__*/styled(Component)({
  name: \\"ComponentCompositing\\",
  class: \\"atm_26_5scuol atm_e2_1nzxncv cccybe9\\",
  atomic: true
});
console.log(ComponentCompositing);"
`;

exports[`compiles atomic styled wrapping other components with extra priority 2`] = `

CSS:

.atm_2d_13q2bts.atm_2d_13q2bts{background-color:blue;}
.atm_e2_12xxubj{height:100px;}
.atm_26_5scuol.atm_26_5scuol{background:red;}
.atm_e2_1nzxncv.atm_e2_1nzxncv{height:105px;}

Dependencies: NA

`;

exports[`compiles atoms that are shared between css and styled templates 1`] = `
"/* @flow */
import { css } from '@linaria/atomic';
import { styled } from '@linaria/atomic';
const x = \\"atm_26_5scuol atm_e2_12xxubj\\";
const Component = /*#__PURE__*/styled('div')({
  name: \\"Component\\",
  class: \\"atm_26_5scuol atm_e2_12xxubj atm_gi_19bvopo atm_7l_15g95l5 cccybe9\\",
  vars: {
    \\"1p69eoh\\": [props => props.color]
  },
  atomic: true
});
console.log(x, Component);"
`;

exports[`compiles atoms that are shared between css and styled templates 2`] = `

CSS:

.atm_26_5scuol{background:red;}
.atm_e2_12xxubj{height:100px;}
.atm_gi_19bvopo{margin:10px;}
.atm_7l_15g95l5{color:var(--1p69eoh);}

Dependencies: NA

`;

exports[`does not include styles if not referenced anywhere 1`] = `
"import { css } from '@linaria/core';
import { styled } from '@linaria/react';
const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});
const title = \\"tccybe9\\";"
`;

exports[`does not include styles if not referenced anywhere 2`] = `Object {}`;

exports[`does not output CSS if none present 1`] = `
"const number = 42;
const title = String.raw\`This is something\`;"
`;

exports[`does not output CSS if none present 2`] = `Object {}`;

exports[`does not output CSS property when value is a blank string 1`] = `
"import { css } from '@linaria/core';
export const title = \\"t17gu1mi\\";"
`;

exports[`does not output CSS property when value is a blank string 2`] = `

CSS:

.t17gu1mi {
  font-size: ;
  margin: 6px;
}

Dependencies: NA

`;

exports[`evaluates and inlines expressions in scope 1`] = `
"import { styled } from '@linaria/react';
const color = 'blue';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`evaluates and inlines expressions in scope 2`] = `

CSS:

.t17gu1mi {
  color: blue;
  width: 33.333333333333336%;
}

Dependencies: NA

`;

exports[`evaluates nested nested object interpolation 1`] = `
"import { css } from '@linaria/core';
const defaultStyle = \\"d17gu1mi\\";
const obj = {
  [\`&.\${defaultStyle} .green\`]: {
    display: \\"inline-block\\",
    border: \\"1px solid green\\"
  }
};
export const greenContentStyles = \\"gccybe9\\";"
`;

exports[`evaluates nested nested object interpolation 2`] = `

CSS:

.d17gu1mi {
  color: red;
  padding-bottom: 0px;
}
.gccybe9 {
  &.d17gu1mi .green { display: inline-block; border: 1px solid green; }
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, @babel/runtime/helpers/defineProperty

`;

exports[`handles css template literal in JSX element 1`] = `
"import { css } from '@linaria/core';
<Title class={\\"t17gu1mi\\"} />;"
`;

exports[`handles css template literal in JSX element 2`] = `

CSS:

.t17gu1mi { font-size: 14px; }

Dependencies: NA

`;

exports[`handles css template literal in object property 1`] = `
"import { css } from '@linaria/core';
const components = {
  title: \\"t17gu1mi\\"
};"
`;

exports[`handles css template literal in object property 2`] = `

CSS:

.t17gu1mi {
    font-size: 14px;
  }

Dependencies: NA

`;

exports[`handles fn passed in as classNameSlug 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi_Title_t17gu1mi_Title___tests___app_index_js_index__js_app\\"
});"
`;

exports[`handles fn passed in as classNameSlug 2`] = `

CSS:

.t17gu1mi_Title_t17gu1mi_Title___tests___app_index_js_index__js_app {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`handles interpolation followed by unit 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\",
  vars: {
    \\"t17gu1mi-0\\": [size, \\"em\\"],
    \\"t17gu1mi-1\\": [shadow, \\"px\\"],
    \\"t17gu1mi-2\\": [size, \\"px\\"],
    \\"t17gu1mi-3\\": [props => props.width, \\"vw\\"],
    \\"t17gu1mi-4\\": [props => {
      if (true) {
        return props.height;
      } else {
        return 200;
      }
    }, \\"px\\"],
    \\"t17gu1mi-5\\": [unit, \\"fr\\"],
    \\"t17gu1mi-7\\": [function (props) {
      return 200;
    }, \\"px\\"]
  }
});"
`;

exports[`handles interpolation followed by unit 2`] = `

CSS:

.t17gu1mi {
  font-size: var(--t17gu1mi-0);
  text-shadow: black 1px var(--t17gu1mi-1), white -2px -2px;
  margin: var(--t17gu1mi-2);
  width: calc(2 * var(--t17gu1mi-3));
  height: var(--t17gu1mi-4);
  grid-template-columns: var(--t17gu1mi-5) 1fr 1fr var(--t17gu1mi-5);
  border-radius: var(--t17gu1mi-7)
}

Dependencies: NA

`;

exports[`handles nested blocks 1`] = `
"import { styled } from '@linaria/react';
export const Button = /*#__PURE__*/styled('button')({
  name: \\"Button\\",
  class: \\"b17gu1mi\\",
  vars: {
    \\"b17gu1mi-0\\": [regular]
  }
});"
`;

exports[`handles nested blocks 2`] = `

CSS:

.b17gu1mi {
  font-family: var(--b17gu1mi-0);

  &:hover {
    border-color: blue;
  }

  @media (max-width: 200px) {
    width: 100%;
  }
}

Dependencies: NA

`;

exports[`handles objects with enums as keys 1`] = `
"import { css } from '@linaria/core';
import { TestEnum } from './ts-data.ts';
export const object = {
  [TestEnum.FirstValue]: \\"t17gu1mi\\",
  [TestEnum.SecondValue]: \\"tccybe9\\"
};"
`;

exports[`handles objects with enums as keys 2`] = `

CSS:

.t17gu1mi {}
.tccybe9 {}

Dependencies: NA

`;

exports[`handles objects with numeric keys 1`] = `
"import { css } from '@linaria/core';
export const object = {
  stringKey: \\"s17gu1mi\\",
  42: \\"_ccybe9\\"
};"
`;

exports[`handles objects with numeric keys 2`] = `

CSS:

.s17gu1mi {}
._ccybe9 {}

Dependencies: NA

`;

exports[`includes unreferenced styles for :global 1`] = `
"import { css } from '@linaria/core';
import { styled } from '@linaria/react';
const a = \\"a17gu1mi\\";
const B = /*#__PURE__*/styled('div')({
  name: \\"B\\",
  class: \\"bccybe9\\"
});"
`;

exports[`includes unreferenced styles for :global 2`] = `

CSS:

.a17gu1mi {
  :global() {
    .title {
      font-size: 14px;
    }
  }
}
.bccybe9 {
  :global(.title) {
    font-size: 14px;
  }
}

Dependencies: NA

`;

exports[`inlines array styles as CSS string 1`] = `
"import { styled } from '@linaria/react';
const styles = [{
  flex: 1
}, {
  display: 'block',
  height: 24
}];
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`inlines array styles as CSS string 2`] = `

CSS:

.t17gu1mi {
  flex: 1; display: block; height: 24px;
}

Dependencies: NA

`;

exports[`inlines object styles as CSS string 1`] = `
"import { styled } from '@linaria/react';
const cover = {
  '--color-primaryText': '#222',
  position: 'absolute',
  top: 0,
  right: 0,
  bottom: 0,
  left: 0,
  opacity: 1,
  minHeight: 420,
  '&.shouldNotBeChanged': {
    borderColor: '#fff'
  },
  '@media (min-width: 200px)': {
    WebkitOpacity: .8,
    MozOpacity: .8,
    msOpacity: .8,
    OOpacity: .8,
    WebkitBorderRadius: 2,
    MozBorderRadius: 2,
    msBorderRadius: 2,
    OBorderRadius: 2,
    WebkitTransition: '400ms',
    MozTransition: '400ms',
    OTransition: '400ms',
    msTransition: '400ms'
  }
};
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`inlines object styles as CSS string 2`] = `

CSS:

.t17gu1mi {
  --color-primaryText: #222; position: absolute; top: 0; right: 0; bottom: 0; left: 0; opacity: 1; min-height: 420px; &.shouldNotBeChanged { border-color: #fff; } @media (min-width: 200px) { -webkit-opacity: 0.8; -moz-opacity: 0.8; -ms-opacity: 0.8; -o-opacity: 0.8; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px; -webkit-transition: 400ms; -moz-transition: 400ms; -o-transition: 400ms; -ms-transition: 400ms; }
}

Dependencies: NA

`;

exports[`outputs valid CSS classname 1`] = `
"import { styled } from '@linaria/react';
export const ΩPage$Title = /*#__PURE__*/styled('h1')({
  name: \\"\\\\u03A9Page$Title\\",
  class: \\"\\\\u03C917gu1mi\\"
});"
`;

exports[`outputs valid CSS classname 2`] = `

CSS:

.ω17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`prevents class name collision 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\",
  vars: {
    \\"t17gu1mi-0\\": [size, \\"px\\"],
    \\"t17gu1mi-1\\": [props => props.color]
  }
});

function Something() {
  const Title = /*#__PURE__*/styled('h1')({
    name: \\"Title\\",
    class: \\"tccybe9\\",
    vars: {
      \\"tccybe9-0\\": [regular]
    }
  });
  return <Title />;
}"
`;

exports[`prevents class name collision 2`] = `

CSS:

.t17gu1mi {
  font-size: var(--t17gu1mi-0);
  color: var(--t17gu1mi-1)
}
.tccybe9 {
    font-family: var(--tccybe9-0);
  }

Dependencies: NA

`;

exports[`removes fake replacement patterns in string classNameSlug 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"__\\"
});"
`;

exports[`removes fake replacement patterns in string classNameSlug 2`] = `

CSS:

.__ {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`replaces unknown expressions with CSS custom properties 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\",
  vars: {
    \\"t17gu1mi-0\\": [size, \\"px\\"],
    \\"t17gu1mi-1\\": [props => props.color]
  }
});"
`;

exports[`replaces unknown expressions with CSS custom properties 2`] = `

CSS:

.t17gu1mi {
  font-size: var(--t17gu1mi-0);
  color: var(--t17gu1mi-1);
}

Dependencies: NA

`;

exports[`supports both css and styled tags 1`] = `
"import { css } from '@linaria/core';
import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});
export const title = \\"tccybe9\\";"
`;

exports[`supports both css and styled tags 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}
.tccybe9 {
  color: blue;
}

Dependencies: NA

`;

exports[`throws when contains dynamic expression without evaluate: true in css tag 1`] = `
"<<DIRNAME>>/__tests__/app/index.js: The CSS cannot contain JavaScript expressions when using the 'css' tag. To evaluate the expressions at build time, pass 'evaluate: true' to the babel plugin.
  2 |
  3 | const title = css\`
> 4 |   font-size: \${size}px;
    |                ^^^^
  5 | \`;"
`;

exports[`transpiles css template literal 1`] = `
"import { css } from '@linaria/core';
export const title = \\"t17gu1mi\\";"
`;

exports[`transpiles css template literal 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles renamed css and atomic-css imports in the same file 1`] = `
"/* @flow */
import { css as coreCss } from '@linaria/core';
import { css as atomicCss } from '@linaria/atomic';
const x = \\"x17gu1mi\\";
const y = \\"atm_26_5scuol\\";
console.log(x, y);"
`;

exports[`transpiles renamed css and atomic-css imports in the same file 2`] = `

CSS:

.x17gu1mi {
  background: red;
}
.atm_26_5scuol{background:red;}

Dependencies: NA

`;

exports[`transpiles renamed css from linaria v2 1`] = `
"import { css as coreCss } from 'linaria';
const x = \\"x17gu1mi\\";
console.log(x);"
`;

exports[`transpiles renamed css from linaria v2 2`] = `

CSS:

.x17gu1mi {
  background: red;
}

Dependencies: NA

`;

exports[`transpiles renamed styled and atomic-styled imports in the same file 1`] = `
"/* @flow */
import { styled as reactStyled } from '@linaria/react';
import { styled as atomicStyled } from '@linaria/atomic';
const StyledComponent = /*#__PURE__*/reactStyled('div')({
  name: \\"StyledComponent\\",
  class: \\"s17gu1mi\\"
});
const StyledComponent2 = /*#__PURE__*/reactStyled(StyledComponent)({
  name: \\"StyledComponent2\\",
  class: \\"sccybe9\\"
});
const AtomicComponent = /*#__PURE__*/atomicStyled('div')({
  name: \\"AtomicComponent\\",
  class: \\"atm_26_5scuol aw1s2ox\\",
  atomic: true
});
const AtomicComponent2 = /*#__PURE__*/atomicStyled(AtomicComponent)({
  name: \\"AtomicComponent2\\",
  class: \\"atm_26_13q2bts a1080ijw\\",
  atomic: true
});
console.log(StyledComponent, StyledComponent2, AtomicComponent, AtomicComponent2);"
`;

exports[`transpiles renamed styled and atomic-styled imports in the same file 2`] = `

CSS:

.s17gu1mi {
  background: red;
}
.sccybe9.s17gu1mi {
  background: blue;
}
.atm_26_5scuol{background:red;}
.atm_26_13q2bts.atm_26_13q2bts{background:blue;}

Dependencies: NA

`;

exports[`transpiles renamed styled import 1`] = `
"import { styled as custom } from '@linaria/react';
export const Title = /*#__PURE__*/custom('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`transpiles renamed styled import 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with TS component 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled(() => {})({
  name: \\"Title\\",
  class: \\"tkullng\\"
});"
`;

exports[`transpiles styled template literal with TS component 2`] = `

CSS:

.tkullng {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with function and component 1`] = `
"import { styled } from '@linaria/react';

const Heading = () => null;

export const Title = /*#__PURE__*/styled(Heading)({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`transpiles styled template literal with function and component 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with function and tag 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`transpiles styled template literal with function and tag 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with object 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi\\"
});"
`;

exports[`transpiles styled template literal with object 2`] = `

CSS:

.t17gu1mi {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles with typed fn as interpolated value 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('div')({
  name: \\"Title\\",
  class: \\"tkullng\\",
  vars: {
    \\"tkullng-0\\": [props => props.className]
  }
});"
`;

exports[`transpiles with typed fn as interpolated value 2`] = `

CSS:

.tkullng {
  font-size: 14px;
  content: "var(--tkullng-0)"
}

Dependencies: NA

`;

exports[`uses string passed in as classNameSlug 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"t17gu1mi_Title___tests___app_index_js_index__js_app\\"
});"
`;

exports[`uses string passed in as classNameSlug 2`] = `

CSS:

.t17gu1mi_Title___tests___app_index_js_index__js_app {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`uses the same custom property for the same expression 1`] = `
"import { styled } from '@linaria/react';
export const Box = /*#__PURE__*/styled('div')({
  name: \\"Box\\",
  class: \\"b17gu1mi\\",
  vars: {
    \\"b17gu1mi-0\\": [props => props.size, \\"px\\"]
  }
});"
`;

exports[`uses the same custom property for the same expression 2`] = `

CSS:

.b17gu1mi {
  height: var(--b17gu1mi-0);
  width: var(--b17gu1mi-0);
}

Dependencies: NA

`;

exports[`uses the same custom property for the same identifier 1`] = `
"import { styled } from '@linaria/react';
export const Box = /*#__PURE__*/styled('div')({
  name: \\"Box\\",
  class: \\"b17gu1mi\\",
  vars: {
    \\"b17gu1mi-0\\": [size, \\"px\\"]
  }
});"
`;

exports[`uses the same custom property for the same identifier 2`] = `

CSS:

.b17gu1mi {
  height: var(--b17gu1mi-0);
  width: var(--b17gu1mi-0);
}

Dependencies: NA

`;
